--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
     "require": {
         "php": "^7.1.3",
         "illuminate/support": "~5.6.0|~5.7.0|~5.8.0|^6.0|^7.0|^8.0",
-        "illuminate/database": "~5.6.0|~5.7.0|~5.8.0|^6.0|^7.0|^8.0"
+        "illuminate/database": "~5.6.0|~5.7.0|~5.8.0|^6.0|^7.0|^8.0",
+        "livewire/livewire": "^1.3"
     },
     "require-dev": {
         "mockery/mockery": "^1.3.1",
